Changes to overflow to prevent scrolling/visible overflow in the case of accidental overflow

--- a/FrontEndMockup/scss/_common.scss
+++ b/FrontEndMockup/scss/_common.scss
@@ -12,6 +12,7 @@ $darker: 10%;
 body{
     font-family: "Roboto", sans-serif;
     color: $text-color;
+    overflow: hidden;
     
     .main {
         display: flex;
@@ -41,7 +42,8 @@ body{
     #scroll {
         width: 100%;
         height: 90%;
-        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: scroll;
         position: relative;
         display: flex;
         justify-content: center;
