--- a/FrontEndMockup/scss/lab_builder.scss
+++ b/FrontEndMockup/scss/lab_builder.scss
@@ -76,7 +76,8 @@ body {
             position: relative;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: scroll;
 
             h1{
                 position: absolute;
